--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,7 @@
 extends blocks/layout/layout.pug
 
+include blocks/header/header.pug
+
 block content
-  p On Air
+  +header()
+  p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis beatae placeat laborum sint sit, libero inventore pariatur impedit incidunt consequatur suscipit, deleniti accusamus voluptatem eos, eveniet? Dolorem cum tenetur doloribus.
