--- a/src/blocks/head/head.pug
+++ b/src/blocks/head/head.pug
@@ -1,9 +1,12 @@
 head 
   meta(charset='utf-8') 
-  meta(http-equiv='x-ua-compatible', content='ie=edge')
+  meta(http-equiv='X-UA-Compatible', content='IE=edge')
   meta(name='viewport', content='width=device-width, initial-scale=1')
 
   block head
 
   title page title
+  link(
+    href='https://fonts.googleapis.com/css?family=Roboto&amp;subset=cyrillic'
+    rel='stylesheet')/
   link(href='style.css', rel='stylesheet')
