--- a/src/blocks/menu/menu.css
+++ b/src/blocks/menu/menu.css
@@ -1,15 +1,63 @@
 .menu {
-  position: relative;
-  background-color: pink;
+  z-index: 1;
 
   &__toggle {
+    position: relative;
     display: inline-block;
-    margin: 5px;
-    padding: 5px;
-    background-color: skyblue;
+    padding-top: 1.188em; /* 19/16 */
+    padding-right: .75em; /* 12/16 */
+    padding-bottom: 1.188em; /* 19/16 */
+    padding-left: .75em; /* 12/16 */
+    line-height: 0;
 
-    @media (--700) {
+    &::before,
+    &::after {
+      position: absolute;
+      left: .75em; /* 12/16 */
+      display: block;
+      width: 1.188em; /* 19/16 */
+      height: .188em; /* 3/16 */
+      background-color: var(--colorDark);
+      content: '';
+    }
+
+    &::before {
+      top: .75em; /* 12/16 */
+    }
+
+    &::after {
+      bottom: .75em; /* 12/16 */
+    }
+
+    &-inner {
+      display: block;
+      width: 1.188em; /* 19/16 */
+      height: .188em; /* 3/16 */
+      background-color: var(--colorDark);
+    }
+
+    @media (--1050) {
       display: none;
+    }
+
+    &--open {
+      &::before,
+      &::after {
+        top: 50%;
+        left: 50%;
+      }
+
+      &::before {
+        transform: translate(-50%, -50%) rotate(45deg);
+      }
+
+      &::after {
+        transform: translate(-50%, -50%) rotate(-45deg);
+      }
+
+      ^&-inner {
+        opacity: 0;
+      }
     }
   }
 
@@ -17,24 +65,108 @@
     position: absolute;
     top: 100%;
     left: 0;
+    z-index: 2;
     display: none;
     width: 100%;
-    background-color: pink;
+    padding-top: .625em; /* 10/16 */
+    padding-bottom: .625em; /* 10/16 */
+    background-color: #fff;
 
-    @media (--700) {
+    @media (--1050) {
       position: static;
       display: block;
+      background: none;
     }
   }
 
   &__item {
-    padding: 5px;
-    /* border: 1px solid green;
-    background-color: tan; */
-    text-transform: uppercase;
+    color: var(--colorDark);
 
-    @media (--700) {
+    @media (--1050) {
       float: left;
+      color: #fff;
+    }
+
+    &-more {
+      position: relative;
+    }
+
+    &-account {
+      padding-top: .625em; /* 10/16 */
+      padding-right: 1em;
+      padding-bottom: .625em; /* 10/16 */
+      background-color: var(--bgHeader);
+      text-align: right;
+
+      @media (--1050) {
+        float: right;
+        padding-top: .188em; /* 3/16 */
+        padding-bottom: 0;
+      }
+    }
+
+    &-submenu {
+      width: 100%;
+    }
+  }
+
+  &__link {
+    display: block;
+    padding-top: .714em; /* 10/14 */
+    padding-right: 1.5em; /* 21/14 */
+    padding-bottom: .714em; /* 10/14 */
+    padding-left: 1.5em; /* 21/14 */
+    border-radius: 2px;
+    color: inherit;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: .875em; /* 14/16 */
+    transition: background-color .2s;
+
+    @media (--1050) {
+      padding-right: .857em; /* 12/14 */
+      padding-left: .857em; /* 12/14 */
+
+      &:hover,
+      &:focus {
+        background-color: var(--colorDarkHover);
+      }
+    }
+
+    &-more {
+      display: none;
+
+      @media (--1050) {
+        position: relative;
+        display: block;
+        height: 100%;
+      }
+
+      & svg {
+        width: 1.429em; /* 20/14 */
+        height: .25em; /* 4/16 */
+        vertical-align: middle;
+        fill: #fff;
+      }
+    }
+  }
+
+  &__submenu {
+    z-index: 2;
+
+    @media (--1050) {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      display: none;
+      width: auto;
+      padding-top: .625em; /* 10/16 */
+      padding-bottom: .625em; /* 10/16 */
+      background-color: var(--bgHeader);
+
+      &--open {
+        display: block;
+      }
     }
   }
 }
