--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,17 @@
 extends blocks/layout/layout.pug
 
 include blocks/header/header.pug
+include blocks/section/section.pug
+include blocks/section-title/section-title.pug
+include blocks/checklist/checklist.pug
 
 block content
   +header()
+  +section()
+    +section-title('Заголовок')
+    +checklist([
+      'Кэшбэк 1% со&nbsp;всех покупок и&nbsp;до&nbsp;10% с покупок в&nbsp;&laquo;любимых местах&raquo;',
+      'А&nbsp;также баллы при покупке в&nbsp;приложении'
+    ])
+    p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque cupiditate nihil id veritatis debitis tempore tempora harum optio eum. Suscipit rerum doloribus natus omnis placeat officiis vel est, dicta cum.
   p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis beatae placeat laborum sint sit, libero inventore pariatur impedit incidunt consequatur suscipit, deleniti accusamus voluptatem eos, eveniet? Dolorem cum tenetur doloribus.
