--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -2,8 +2,13 @@
   display: inline-block;
   height: 2em; /* 32/16 */
   border-radius: 2px;
+  text-align: center;
   text-decoration: none;
   line-height: 2em; /* 32/16 */
+
+  &__text {
+    vertical-align: top;
+  }
 
   &--account {
     margin-right: .188em; /* 3/16 */
@@ -35,6 +40,52 @@
     &:hover,
     &:focus {
       background-color: var(--colorDarkHover);
+    }
+  }
+
+  &--tab {
+    width: 124px;
+    border: 1px solid var(--buttonTab);
+    color: var(--textDark);
+    transition: background-color .2s;
+
+    ^&__text {
+      font-size: .75em; /* 12/16 */
+    }
+
+    &-left {
+      border-right: none;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    &-right {
+      border-left: none;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+
+    &-active {
+      border-color: var(--colorMain);
+      background-color: var(--colorMain);
+    }
+  }
+
+  &--action {
+    width: 9.625em; /* 154/16 */
+    height: 2.5em; /* 40/16 */
+    background-color: var(--colorAccent);
+    color: #fff;
+    line-height: 2.5em; /* 40/16 */
+    transition: background-color 1s;
+
+    ^&__text {
+      font-size: .875em; /* 14/16 */
+    }
+
+    &:hover,
+    &:focus {
+      background-color: var(--colorAccentHover);
     }
   }
 }
