--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -12,6 +12,10 @@
 
 @import '../checklist/checklist.css';
 
+@import '../card/card.css';
+
+@import '../info/info.css';
+
 .page {
   margin: 0;
   font-family: Roboto, sans-serif;
