--- a/src/blocks/script/script.pug
+++ b/src/blocks/script/script.pug
@@ -1,5 +1,5 @@
 mixin script(scripts)
   each src in scripts
     - const isExternalScript = /^(?:https?\:)?\/\//i;
-    - src = isExternalScript.test(src) ? src : '/' + src;
+    - src = isExternalScript.test(src) ? src : src;
     script(src=src)
